# api/route/account_route.go
@@ -4,6 +4,7 @@ import (
 	"time"
 
 	"github.com/neJok/StonTactics/api/controller"
+	"github.com/neJok/StonTactics/api/middleware"
 	"github.com/neJok/StonTactics/bootstrap"
 	"github.com/neJok/StonTactics/domain"
 	"github.com/neJok/StonTactics/mongo"
@@ -21,5 +22,8 @@ func NewAccountRouter(env *bootstrap.Env, timeout time.Duration, db mongo.Databa
 	}
 
 	group.GET("/account", ac.Fetch)
-	group.DELETE("/account", ac.DeleteAccount)
+	group.DELETE("/account", ac.Delete)
+
+	group.Use(middleware.BodySizeMiddleware(10<<20))
+	group.PUT("/account", ac.Update)
 }
